Fixed cache-manifest for static version

--- a/plan.html
+++ b/plan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="cache-manifest">
+<html manifest="plan-cache-manifest">
   <head>
     <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
       <title>Family Emergency Plan for {{current_user.nickname}}</title>
